# SpongeSplits

./: .bazelrc  .clang-format  .envrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  format.py  requirements.txt  requirements_dev.txt  requirements_lock.txt  requirements_prod.txt  ruff.toml
.github/workflows/: format.yaml  lint.yaml  linter.yml  tests.yaml  unit_tests.yaml
autosplit/: BUILD  app.py  collect.py  file_moving.py  main.cpp  preview.py  temp.py  temp2.py  test.py
autosplit/capture/: BUILD  capture_engine.hpp  frame.cpp  frame.hpp
autosplit/capture/win/: BUILD  win_capture_engine.cpp  win_capture_engine.hpp
autosplit/capture/win/tests/: BUILD  win_capture_engine_tests.cpp
autosplit/common/: colors.py  livesplit.py
autosplit/common/error/: __init__.py  exceptions.py  validate.py
autosplit/common/keyboard/: trigger_listener.py
autosplit/common/video/: webcam.py
autosplit/config/: BUILD  README.md  __init__.py  config-sample.yaml  config.cpp  config.hpp  config.yaml  validate.py
autosplit/config/tests/: BUILD  config_test.cpp
autosplit/image/: frame.py  frame_buffer.py
autosplit/image/diglet/: frame_processor.py  model.py  specifications.py  specs.yaml
autosplit/util/: buffer_worker.py  display.py  frame_processor.py  route.py
config/: BUILD  settings.yaml
lib/: Keras-2.3.1-py2.py3-none-any.whl  README.md
requirements/: common.txt  dev.txt
src/: autosplit.py  collect.py  main.py  processor.py  sample.py
src/image/: frame.py  frame_buffer.py  frame_hash.py
src/image/diglet/: image_processor.py  model.py  specifications.py  specs.yaml
src/keyboard/: trigger_listener.py
src/learner/: image_processor.py  model.py  specifications.py
src/util/: buffer_worker.py
src/util/keyboard/: trigger_listener.py
src/util/video/: webcam.py
src/video/: webcam.py
toolchain/: BUILD
toolchain/llvm/: install.bzl  llvm.BUILD
toolchain/ruff/: install.bzl  ruff.BUILD
tools/: BUILD  print.py
tools/format/: BUILD  format.py
tools/format/lang/: BUILD  language.py
tools/format/system/: BUILD  file.py  formatter.py  print.py
tools/lint/: BUILD  lint.py
