###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# https://github.com/aspect-build/rules_lint/releases
bazel_dep(name = "aspect_rules_lint", version = "0.18.0")

# https://github.com/bazelbuild/bazel-skylib/releases
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# https://github.com/bazel-contrib/toolchains_llvm/releases
bazel_dep(name = "toolchains_llvm", version = "v1.1.2")
git_override(
  module_name = "toolchains_llvm",
  commit = "e0ffa169a2572e9f35a52de60fe746831d1e2a0a",
  remote = "https://github.com/bazel-contrib/toolchains_llvm",
)
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "16.0.0",
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")
register_toolchains("@llvm_toolchain//:all")

# https://github.com/bazelbuild/rules_python/releases
bazel_dep(name = "rules_python", version = "0.31.0")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "requirements_lock.txt",
)
use_repo(pip, "pip")
